--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div id="root"></div>
     
     <script src="https://kit.fontawesome.com/1393f4d815.js" crossorigin="anonymous"></script>  
-    <script type="module" src="Script.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
